# idea-inbox-feishu

./: .gitignore  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml
config/: config.example.json  tables.json
docs/: automation.md  feishu-setup.md
ideainbox/: __init__.py  __main__.py  config.py  feishu.py  scanner.py  setup_base.py
inbox/: README.md
